# FireBot

./: .gitignore  README.md
arduino/firebot_controller/: firebot_controller.ino
docker/: Dockerfile  docker-compose.yml
docs/: ARDUINO_SETUP.md  RASPBERRY_PI_SETUP.md  WIRING_GUIDE.md  YOLO_FIRE_MODEL.md
firebot_ws/src/firebot/: package.xml  setup.py
firebot_ws/src/firebot/config/: firebot_params.yaml
firebot_ws/src/firebot/firebot/: arduino_bridge_node.py  brain_node.py  fire_detector_node.py  sim_publisher.py
firebot_ws/src/firebot/launch/: firebot.launch.py
firebot_ws/src/firebot_interfaces/: package.xml
firebot_ws/src/firebot_interfaces/msg/: FireDetection.msg
scripts/: rpi_signal_demo.sh  run_full_test.sh  sim_publisher.py  test_fire_camera_yolo11.py  test_motors.sh  test_scenario.sh  test_state_machine_standalone.py
