<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firebot</name>
  <version>0.1.0</version>
  <description>FireBot ROS2 nodes: vision, state machine, and Arduino bridge</description>
  <maintainer email="eschneider@sfsu.edu">Evan Schneider</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>firebot_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
